# UBB

./: README.md  lab1_ai.ipynb
Semestrul 1/Arhitectura Sistemelor de Calcul/Proba Practica/: fisier.txt  practic.asm
Semestrul 1/Fundamentele Programarii/: hello.py
Semestrul 1/Fundamentele Programarii/Cautari - Sortari/: Bubble_Sort.py  Cautare_Binara (iterativ).py  Cautare_Binara (recursiv).py  Cautare_Secventiala (chei ordonate).py  Cautare_Secventiala.py  Merge_Sort.py  Quick_Sort.py  Sortare_prin_Insertie.py  Sortare_prin_Selectie.py
Semestrul 1/Fundamentele Programarii/Sesiune - Practic/: main.py
Semestrul 1/Programare C/hello world/: hello  helloworld  helloworld.c
Semestrul 2/Algoritmica grafurilor/algoritmi/: Bellman-Ford.cpp  Ciclu-Euleriean.cpp  Codare-Pruffer.cpp  Decodare-Pruffer.cpp  Ford-Fulkerson.cpp  Johnson.cpp  Kruskal.cpp  Prim.cpp  conversii.cpp
Semestrul 2/Algoritmica grafurilor/test2/: Albert_Regus_216.cpp
Semestrul 2/Programare orientata obiect/Laborator/Lab10-11/Agentie de turism/: Agentie de turism  Agentie de turism.pro  AgentieService.cpp  AgentieService.h  CMakeLists.txt  Makefile  Oferta.cpp  OfertaRepo.cpp  OfertaStoreGUI.cpp  OfertaStoreGUI.h  RepoLab.cpp  Undo.h  Validator.h  consola.cpp  consola.h  main.cpp  oferte.txt  test.csv  test.html  test.txt  teste.cpp  teste.h
Semestrul 2/Programare orientata obiect/Laborator/Lab13-14/Agentie de turism/: Agentie de turism  Agentie de turism.pro  CMakeLists.txt  CosCRUDGUI.h  CosReadOnlyGUI.h  Cos_Oferte.cpp  Cos_Oferte.h  Makefile  OfertaStoreGUI.cpp  OfertaStoreGUI.h  Repo.cpp  Repo.h  Service.cpp  Service.h  StoreGUIModele.cpp  StoreGUIModele.h  TableModel.h  Teste.cpp  Teste.h  Undo.h  Validator.cpp  Validator.h  main.cpp  observer.h  oferta.cpp  oferta.h  oferte.txt  test  test.txt  test_export
Semestrul 2/Programare orientata obiect/Laborator/Lab2-4/Cofetarie/: CMakeLists.txt  MateriePrima.c  MateriePrima.h  README.md  repository.c  repository.h  service.c  service.h  teste.c  teste.h  ui.c
Semestrul 2/Programare orientata obiect/Laborator/Lab2-4/Cofetarie[Alocare Dinamica]/: CMakeLists.txt  MateriePrima.c  MateriePrima.h  repository.c  repository.h  service.c  service.h  teste.c  teste.h  ui.c
Semestrul 2/Programare orientata obiect/Laborator/Lab5/Lab5[Lista generica]/: CMakeLists.txt  MyList.h  farmacie_service.c  farmacie_service.h  main.c  medicament.c
Semestrul 2/Programare orientata obiect/Laborator/Lab6/Agentie de turism/: CMakeLists.txt  OfertaRepo.cpp  OfertaRepo.h  README.md  main.cpp  teste.cpp
Semestrul 2/Programare orientata obiect/Pregatire_Sesiune/: GUI.cpp  GUI.h  domain.h  input.txt  repo.h  service.cpp  service.h  test.txt  teste.cpp
Semestrul 2/Programare orientata obiect/Pregatire_Sesiune/App/: CMakeLists.txt  GUI.cpp  GUI.h  MODEL.h  domain.cpp  domain.h  input.txt  inputTest.txt  main.cpp  repository.cpp  repository.h  service.cpp  service.h  teste.cpp  teste.h
Semestrul 2/Programare orientata obiect/Pregatire_Sesiune/Melodie1/: CMakeLists.txt  GUI.cpp  GUI.h  MODEL.h  domain.cpp  input.txt  main.cpp  repo.cpp  repo.h  teste.cpp  teste.h
Semestrul 2/Programare orientata obiect/Pregatire_Sesiune/Melodie2/: CMakeLists.txt  GUI.cpp  GUI.h  MODEL.h  domain.cpp  domain.h  fisiertext.txt  input.txt  main.cpp  repository.cpp  repository.h  service.cpp  service.h  teste.cpp  teste.h
Semestrul 2/Programare orientata obiect/Pregatire_Sesiune/Produse/: CMakeLists.txt  GUI.cpp  GUI.h  MODEL.h  domain.cpp  domain.h  input.txt  main.cpp  observer.h  repository.cpp  repository.h  service.cpp  service.h
Semestrul 2/Programare orientata obiect/Pregatire_Sesiune/TableMODEL/: CMakeLists.txt  GUI.cpp  GUI.h  MyListModel.h  MyTableModel.h  domain.cpp  domain.h  fisier.txt  main.cpp  repository.cpp  repository.h  service.cpp  service.h  teste.cpp  teste.h  testfile.txt
Semestrul 2/Programare orientata obiect/SESIUNE_PRACTIC/: CMakeLists.txt  GUI.cpp  GUI.h  domain.h  fileTests.txt  main.cpp  repository.cpp  repository.h  service.cpp  service.h  taskFile.txt  teste.cpp  teste.h
Semestrul 2/Programare orientata obiect/Simulare/: GUI.cpp  GUI.h  Zbor.cpp  Zbor.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h
Semestrul 2/Sisteme de operare/: Ex Poze.docx
Semestrul 2/Structuri de date si algoritmi/Laborator/Interfete TAD (proiecte C++) si teste/TAD Colectie/: CMakeLists.txt  interfata.txt
Semestrul 2/Structuri de date si algoritmi/Laborator/Interfete TAD (proiecte C++) si teste/TAD Colectie/Proiect C++/Colectie/: App.cpp  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
Semestrul 2/Structuri de date si algoritmi/Laborator/Interfete TAD (proiecte C++) si teste/TAD Colectie/Proiect C++/Colectie (cu rel)/: App.cpp  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
Semestrul 2/Structuri de date si algoritmi/Laborator/Interfete TAD (proiecte C++) si teste/TAD Colectie/Teste/: TestExtins.cpp  TestScurt.cpp
Semestrul 2/Structuri de date si algoritmi/Laborator/Interfete TAD (proiecte C++) si teste/TAD Colectie/Teste (cu relatie)/: TestExtins.cpp  TestScurt.cpp
Semestrul 2/Structuri de date si algoritmi/Laborator/Laboratoare/Lab3/: App.cpp  CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h  TestExtins.cpp  TestScurt.cpp  interfata (cu relatie).txt
Semestrul 2/Structuri de date si algoritmi/Laborator/Laboratoare/Lab4/: App.cpp  CMakeLists.txt  IteratorMDO.cpp  IteratorMDO.h  IteratorNou.cpp  IteratorNou.h  IteratorVal.cpp  MDO.cpp  MDO.h  TestExtins.cpp  TestExtins.h  TestScurt.cpp  TestScurt.h
Semestrul 2/Structuri de date si algoritmi/Laborator/Laboratoare/Lab6/: App.cpp  CMakeLists.txt  IteratorMDO.cpp  IteratorMDO.h  MDO.cpp  MDO.h  TestExtins.cpp  TestScurt.cpp
Semestrul 3/Baze de Date/: practic.sql
Semestrul 3/Programare Logica si Functionala/: practicLisp.lsp  practicProlog.pl
Semestrul 3/Retele de calculatoare/: ex.pkt  impartire_retea.docx  retea.pkt  retea_dinamic.pkt  retea_nat.pkt  retea_static.pkt  rip.pkt
Semestrul 4/Ingineria Sistemelor Soft/: biblioteca.txt
(+2113 files in other folders)
